implements custom annotation processing for api examples